[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of a Least Recently Used caching algorithm in a container which may be limited by size or time, ordered by most recently seen."
documentation = "https://docs.rs/lru_time_cache"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "lru_time_cache"
readme = "README.md"
repository = "https://github.com/maidsafe/lru_time_cache"
version = "0.11.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = {version = "^0.1", features = ["wasm-bindgen"]}

[dependencies.sn_fake_clock]
optional = true
version = "~0.4.0"

[dev-dependencies]
rand = "~0.6.5"
